@@ -470,6 +470,13 @@
   '(("gems_src_install" "gems-location")
     font-lock-type-face))
 
+(defvar ebuild-mode-keywords-ruby-ng
+  '(("ruby_fakegem_gemsdir" "ruby_fakegem_doins" "ruby_fakegem_newsins"
+     "ruby_fakegem_genspec" "ruby_fakegem_binwrapper" "all_fakegem_compile" "all_ruby_unpack"
+     "all_ruby_compile" "each_fakegem_test" "each_ruby_test" "each_fakegem_install"
+     "each_ruby_install" "all_fakegem_install" "all_ruby_install")
+    font-lock-type-face))
+
 (defvar ebuild-mode-keywords-elisp-common
   '(("elisp-compile" "elisp-install" "elisp-site-file-install"
      "elisp-site-regen" "elisp-emacs-version" "elisp-make-autoload-file")
