@@ -1,3 +1,8 @@
+2009-12-16  Christian Faulhammer  <fauli@gentoo.org>
+
+	* ebuild-mode-keywords.el (ebuild-mode-keywords-ruby-ng): Add
+	ruby-ng eclass
+
 2009-12-15  Christian Faulhammer  <fauli@gentoo.org>
 
 	* ebuild-mode-keywords.el (ebuild-mode-keywords-qt4-r2): Add new
